# serializer version: 1
# name: test_command_help_matches_snapshot[agent]
  '''
  
   Usage: assembly agent [OPTIONS] [SOURCE]
  
   Have a live two-way voice conversation with an AssemblyAI voice agent.
  
   Use headphones: the mic stays open while the agent speaks, so on speakers it
   would
   hear itself and loop. Pass an audio file/URL (or --sample) to speak a recorded
   clip to
   the agent instead of the microphone; the session then ends after the agent's
   reply.
  
   This only runs a conversation in the terminal — it writes no code. To build
   a voice agent app, run 'assembly init voice-agent' instead.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file path or URL to speak to the agent. Omit   │
  │                         to use the microphone.                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                                   Speak the hosted wildfires.mp3    │
  │                                            sample to the agent.              │
  │ --voice                       TEXT         Agent voice. See --list-voices.   │
  │                                            [default: ivy]                    │
  │ --system-prompt               TEXT         System prompt (the agent's        │
  │                                            persona).                         │
  │                                            [default: You are a friendly      │
  │                                            voice assistant having a casual   │
  │                                            conversation. Keep replies short  │
  │                                            and natural, usually one or two   │
  │                                            sentences. Speak the way a person │
  │                                            would in real conversation:       │
  │                                            relaxed, low-key, no exclamation  │
  │                                            marks.]                           │
  │ --system-prompt-file          FILE         Read the system prompt from a     │
  │                                            file (overrides --system-prompt). │
  │ --greeting                    TEXT         Spoken greeting.                  │
  │                                            [default: Hey, what's on your     │
  │                                            mind?]                            │
  │ --device                      INTEGER      Microphone device index.          │
  │ --list-voices                              Print known voices and exit.      │
  │ --json                -j                   Emit newline-delimited JSON       │
  │                                            events.                           │
  │ --output              -o      [text|json]  Output mode: text (you:/agent:    │
  │                                            lines as plain stdout,            │
  │                                            pipe-friendly) or json.           │
  │ --show-code                                Print the equivalent Python SDK   │
  │                                            code and exit (does not start a   │
  │                                            session).                         │
  │ --help                                     Show this message and exit.       │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Start a live voice conversation
   $ assembly agent
   Pick a voice and opening line
   $ assembly agent --voice james --greeting "Hi there"
   Give the agent a persona
   $ assembly agent --system-prompt "You are a terse pirate."
   See available voices
   $ assembly agent --list-voices
   Print equivalent Python instead of running
   $ assembly agent --show-code
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[audit]
  '''
  
   Usage: assembly audit [OPTIONS]
  
   List recent audit-log entries for your account.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit                   INTEGER  How many entries to show. [default: 20]   │
  │ --action                  TEXT     Filter by raw action name.                │
  │ --resource                TEXT     Filter by raw resource type.              │
  │ --include-logins                   Show successful login events.             │
  │ --json            -j               Output raw JSON.                          │
  │ --help                             Show this message and exit.               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Recent audit-log entries
   $ assembly audit
   Show more entries
   $ assembly audit --limit 100
   Include login events
   $ assembly audit --include-logins
   Filter by action
   $ assembly audit --action token.create
   Filter by resource, as JSON
   $ assembly audit --resource token --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[balance]
  '''
  
   Usage: assembly balance [OPTIONS]
  
   Show your remaining account balance.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show your remaining balance
   $ assembly balance
   Get the raw cents for scripting
   $ assembly balance --json | jq '.balance_in_cents'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[deploy]
  '''
  
   Usage: assembly deploy [OPTIONS]
  
   Deploy the current project to Vercel (default), Railway, or Fly.io.
  
   Asks for confirmation first, then runs the target's CLI (`vercel deploy`,
   `railway up`, or `fly launch`). Requires that target's CLI to be installed.
   (Render deploys from a connected Git repo — see the project README.)
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --prod               Deploy to production (Vercel only).                     │
  │ --vercel             Deploy to Vercel (the default).                         │
  │ --railway            Deploy to Railway.                                      │
  │ --fly                Deploy to Fly.io.                                       │
  │ --yes      -y        Skip the confirmation prompt.                           │
  │ --help               Show this message and exit.                             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Deploy a preview to Vercel (asks first)
   $ assembly deploy
   Deploy to production on Vercel
   $ assembly deploy --prod --yes
   Deploy to Railway
   $ assembly deploy --railway
   Deploy to Fly.io
   $ assembly deploy --fly
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[dev]
  '''
  
   Usage: assembly dev [OPTIONS]
  
   Launch the dev server for the app in the current directory.
  
   Run this from inside a project created by `assembly init`. It installs
   dependencies
   if needed, then starts the FastAPI server with live reload and opens the
   browser.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --host                TEXT     Interface to bind. Loopback by default; pass  │
  │                                0.0.0.0 to expose on your network.            │
  │                                [default: 127.0.0.1]                          │
  │ --no-open                      Launch, but don't open the browser.           │
  │ --no-install                   Skip dependency install; launch directly.     │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Launch the app in the current directory
   $ assembly dev
   Use a specific port
   $ assembly dev --port 8000
   Launch without opening a browser
   $ assembly dev --no-open
   Skip the dependency install step
   $ assembly dev --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[doctor]
  '''
  
   Usage: assembly doctor [OPTIONS]
  
   Check that your environment is ready to use AssemblyAI.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Check your environment is ready
   $ assembly doctor
   Output results as JSON
   $ assembly doctor --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[init]
  '''
  
   Usage: assembly init [OPTIONS] [TEMPLATE] [DIRECTORY]
  
   Scaffold a new project from a template, then launch it.
  
   This is the starting point for creating an app — including a voice agent app
   ('assembly init voice-agent'). The 'assembly agent' command only runs a live
   mic
   conversation and writes no code.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   template       [TEMPLATE]   Template to scaffold: audio-transcription,     │
  │                               live-captions, voice-agent (omit to pick       │
  │                               interactively).                                │
  │   directory      [DIRECTORY]  Target directory (default: <template>).        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --no-install                   Scaffold only; don't install or launch.       │
  │ --no-open                      Install + launch, but don't open the browser. │
  │ --force                        Overwrite a non-empty target directory.       │
  │ --here                         Scaffold into the current directory.          │
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Scaffold a new app interactively
   $ assembly init
   Scaffold an audio transcription app into ./my-app
   $ assembly init audio-transcription my-app
   Scaffold a voice agent app
   $ assembly init voice-agent
   Scaffold into the current directory
   $ assembly init audio-transcription --here
   Scaffold only, without installing or launching
   $ assembly init audio-transcription --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_create]
  '''
  
   Usage: assembly keys create [OPTIONS]
  
   Create a new API key. Prints the key value once — copy it now.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ *  --name             TEXT     A label for the new key. [required]           │
  │    --project          INTEGER  Project id to create the key in (defaults to  │
  │                                your first).                                  │
  │    --json     -j               Output raw JSON.                              │
  │    --help                      Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Create a key in your default project
   $ assembly keys create --name ci-pipeline
   Create a key in a specific project
   $ assembly keys create --name prod --project 7
   Capture the new key into an env var
   $ export ASSEMBLYAI_API_KEY=$(assembly keys create --name ci --json | jq -r
   '.api_key')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_list]
  '''
  
   Usage: assembly keys list [OPTIONS]
  
   List API keys across your projects (keys shown masked).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List your API keys (masked)
   $ assembly keys list
   As JSON for scripting
   $ assembly keys list --json
   Get key ids to use with rename
   $ assembly keys list --json | jq '.[].id'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[keys_rename]
  '''
  
   Usage: assembly keys rename [OPTIONS] TOKEN_ID NEW_NAME
  
   Rename an existing API key.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    token_id      INTEGER  The key id (see `assembly keys list`).           │
  │                             [required]                                       │
  │ *    new_name      TEXT     The new label. [required]                        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Relabel a key (id from `assembly keys list`)
   $ assembly keys rename 123 "prod"
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[limits]
  '''
  
   Usage: assembly limits [OPTIONS]
  
   Show your account's rate limits per service.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show rate limits per service
   $ assembly limits
   As JSON for scripting
   $ assembly limits --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[llm]
  '''
  
   Usage: assembly llm [OPTIONS] [PROMPT]
  
   Send a prompt to AssemblyAI's LLM Gateway and print the response.
  
   With --transcript-id the transcript's text is injected server-side, so you
   can ask questions about a past transcription (e.g. assembly llm "summarize"
   --transcript-id ID).
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   prompt      [PROMPT]  The prompt to send to the model.                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --model                  TEXT         LLM Gateway model.                     │
  │                                       [default: claude-haiku-4-5-20251001]   │
  │ --transcript-id          TEXT         Inject this transcript's text into the │
  │                                       prompt.                                │
  │ --system                 TEXT         Optional system prompt.                │
  │ --follow         -f                   Re-run the prompt over a growing       │
  │                                       transcript piped on stdin, refreshing  │
  │                                       the answer in place on every finalized │
  │                                       turn (e.g. assembly stream -o text |   │
  │                                       assembly llm -f "summarize action      │
  │                                       items as I talk"). Ctrl-C to stop.     │
  │ --output         -o      [text|json]  Print one field of the result: text    │
  │                                       (just the answer, pipe-friendly) or    │
  │                                       json.                                  │
  │ --max-tokens             INTEGER      Max tokens to generate.                │
  │                                       [default: 1000]                        │
  │ --list-models                         Print known models and exit.           │
  │ --json           -j                   Output raw JSON (one object per turn   │
  │                                       in --follow mode).                     │
  │ --help                                Show this message and exit.            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Ask about a past transcript
   $ assembly llm "summarize the key decisions" --transcript-id 5551234-abcd
   Pipe any text in
   $ echo "meeting notes" | assembly llm "turn into action items"
   Pick a model and add a system prompt
   $ assembly llm "draft a follow-up email" --model claude-opus-4-7 --system "Be
   concise."
   See available models
   $ assembly llm --list-models
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[login]
  '''
  
   Usage: assembly login [OPTIONS]
  
   Authenticate via your browser; stores a CLI API key.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --api-key          TEXT  Provide key non-interactively.                      │
  │ --json     -j            Output raw JSON.                                    │
  │ --help                   Show this message and exit.                         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Log in with your browser
   $ assembly login
   Log in non-interactively (CI)
   $ assembly login --api-key sk_...
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[logout]
  '''
  
   Usage: assembly logout [OPTIONS]
  
   Clear stored credentials for the active profile.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Clear stored credentials for the active profile
   $ assembly logout
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[onboard]
  '''
  
   Usage: assembly onboard [OPTIONS]
  
   Guided setup: sign in, run your first transcription, and start building.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json             -j        Output raw JSON.                                │
  │ --non-interactive            Run without interactive prompts (default when   │
  │                              agent detected).                                │
  │ --help                       Show this message and exit.                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Run the guided setup
   $ assembly onboard
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[sessions_get]
  '''
  
   Usage: assembly sessions get [OPTIONS] SESSION_ID
  
   Show details for one streaming session.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    session_id      TEXT  Streaming session id. [required]                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show one session's details
   $ assembly sessions get sess_5551234
   Raw JSON for one session
   $ assembly sessions get sess_5551234 --json
   Drill into the latest session
   $ assembly sessions get $(assembly sessions list --json | jq -r
   '.[0].session_id')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[sessions_list]
  '''
  
   Usage: assembly sessions list [OPTIONS]
  
   List recent streaming sessions.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit           INTEGER  How many sessions to show. [default: 10]          │
  │ --status          TEXT     Filter: created, completed, or error.             │
  │ --json    -j               Output raw JSON.                                  │
  │ --help                     Show this message and exit.                       │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List recent streaming sessions
   $ assembly sessions list
   Find failed sessions
   $ assembly sessions list --status error
   Inspect the most recent session
   $ assembly sessions get $(assembly sessions list --json | jq -r
   '.[0].session_id')
   Total audio across recent sessions (seconds)
   $ assembly sessions list --json | jq '[.[].audio_duration_sec] | add'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_install]
  '''
  
   Usage: assembly setup install [OPTIONS]
  
   Set up your coding agent for AssemblyAI (docs MCP server + skills).
  
   Installs three things: the assemblyai-docs MCP server (live API docs, via
   `claude mcp add`), the AssemblyAI skill (via `npx skills add`), and the
   bundled
   aai-cli skill (copied from this package, no network). Each step is idempotent
   and skipped if already present unless --force.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --scope          [user|project|local]  Config scope to register the MCP      │
  │                                        under. Presence is detected across    │
  │                                        all scopes.                           │
  │                                        [default: user]                       │
  │ --force                                Reinstall even if already present.    │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Set up your coding agent for AssemblyAI
   $ assembly setup install
   Install for the current project only
   $ assembly setup install --scope project
   Reinstall everything even if already present
   $ assembly setup install --force
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_remove]
  '''
  
   Usage: assembly setup remove [OPTIONS]
  
   Remove the AssemblyAI MCP server and skills from your coding agent.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --scope          [user|project|local]  Only remove the MCP from this scope.  │
  │                                        Default: remove from whichever scope  │
  │                                        it exists in.                         │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Remove the AssemblyAI MCP server and skills
   $ assembly setup remove
   Remove only from the project scope
   $ assembly setup remove --scope project
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[setup_status]
  '''
  
   Usage: assembly setup status [OPTIONS]
  
   Show whether the AssemblyAI MCP server and skills are set up in your coding
   agent.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show what's set up
   $ assembly setup status
   Print status as JSON
   $ assembly setup status --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[share]
  '''
  
   Usage: assembly share [OPTIONS]
  
   Boot the app and expose it on a public URL via a cloudflared tunnel.
  
   Run this from inside a project created by `assembly init`. It starts the dev
   server and
   opens a cloudflared quick tunnel, printing a shareable
   https://*.trycloudflare.com
   URL. Requires cloudflared (macOS: `brew install cloudflared`; other platforms:
   https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/
   downloads/).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --port                INTEGER  Local server port. [default: 3000]            │
  │ --no-install                   Skip dependency install; launch directly.     │
  │ --json        -j               Output raw JSON.                              │
  │ --help                         Show this message and exit.                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Share the running app on a public URL
   $ assembly share
   Use a specific local port
   $ assembly share --port 8000
   Skip the dependency install step
   $ assembly share --no-install
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[speak]
  '''
  
   Usage: assembly speak [OPTIONS] [TEXT]
  
   Synthesize speech from text with AssemblyAI streaming TTS (sandbox only).
  
   Plays the audio through your speakers by default, or writes a WAV with --out.
   Speaker-labeled input (from 'assembly transcribe --speaker-labels') is
   detected
   automatically: the labels are stripped and each speaker gets a different
   voice. This feature only exists in the sandbox today — run it with --sandbox.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   text      [TEXT]  Text to speak. Omit to read from stdin.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --voice                TEXT     Voice id, or SPEAKER=VOICE for diarized      │
  │                                 input (repeatable, e.g. --voice A=jane).     │
  │ --language             TEXT     Language of the text. [default: English]     │
  │ --sample-rate          INTEGER  Output sample rate in Hz. Server default if  │
  │                                 omitted.                                     │
  │ --out                  PATH     Write a WAV file instead of playing through  │
  │                                 the speakers.                                │
  │ --json         -j               Emit JSON metadata about the synthesized     │
  │                                 audio.                                       │
  │ --help                          Show this message and exit.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Speak text aloud (sandbox only)
   $ assembly speak "Hello there, friend." --sandbox
   Pick a voice and language
   $ assembly speak "Bonjour" --voice jane --language French --sandbox
   Speak a diarized transcript, one voice per speaker
   $ assembly transcribe meeting.mp3 --speaker-labels | assembly speak --sandbox
   Override a speaker's voice
   $ … | assembly speak --voice A=vera --voice B=paul --sandbox
   Save to a WAV instead of playing
   $ assembly speak "Hello" --out /tmp/hello.wav --sandbox
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[stream]
  '''
  
   Usage: assembly stream [OPTIONS] [SOURCE]
  
   Transcribe live audio in real time — from your mic, a file, a URL, or a pipe.
  
   Pass - as the source to read raw PCM16/mono/16k audio on stdin, e.g.
   ffmpeg -i input.mp4 -f s16le -ar 16000 -ac 1 - | assembly stream -.
  
   --prompt biases the speech model. --llm runs a prompt over the live transcript
   in-process, refreshing the answer on every finalized turn; for a separate step
   instead, pipe the text out with -o text | assembly llm -f "…".
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file path, URL, or YouTube/podcast page URL to │
  │                         stream. Use - for raw PCM16/mono/16k on stdin. Omit  │
  │                         to use the microphone.                               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                          Stream the hosted wildfires.mp3 sample.    │
  │ --json       -j                   Emit newline-delimited JSON events.        │
  │ --output     -o      [text|json]  Output mode: text (finalized turns as      │
  │                                   plain lines, pipe-friendly) or json.       │
  │ --show-code                       Print the equivalent Python SDK code and   │
  │                                   exit (does not stream).                    │
  │ --help                            Show this message and exit.                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Audio Capture ──────────────────────────────────────────────────────────────╮
  │ --sample-rate              INTEGER  Force a microphone capture rate in Hz    │
  │                                     (default: device native).                │
  │ --device                   INTEGER  Microphone device index.                 │
  │ --system-audio                      macOS only: stream system/app audio and  │
  │                                     microphone as separate sessions.         │
  │ --system-audio-only                 macOS only: stream system/app audio      │
  │                                     without the microphone.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Model & Language ───────────────────────────────────────────────────────────╮
  │ --speech-model              [universal-streaming-m  Streaming speech model.  │
  │                             ultilingual|universal-  [default: u3-rt-pro]     │
  │                             streaming-english|u3-r                           │
  │                             t-pro|whisper-rt|u3-pr                           │
  │                             o]                                               │
  │ --encoding                  [pcm_s16le|pcm_mulaw]   Audio encoding.          │
  │ --language-detection                                Auto-detect the spoken   │
  │                                                     language.                │
  │ --domain                    TEXT                    Domain preset (e.g.      │
  │                                                     medical).                │
  │ --prompt                    TEXT                    Prompt to bias the       │
  │                                                     speech model (supported  │
  │                                                     models only).            │
  │ --keyterms-prompt           TEXT                    Boost a key term         │
  │                                                     (repeatable).            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Turn Detection ─────────────────────────────────────────────────────────────╮
  │ --end-of-turn-confidence                         FLOAT RANGE   End-of-turn   │
  │                                                  [0.0<=x<=1.0  confidence    │
  │                                                  ]             (0-1).        │
  │ --min-turn-silence                               INTEGER       Min silence   │
  │                                                                to end a turn │
  │                                                                (ms).         │
  │ --max-turn-silence                               INTEGER       Max silence   │
  │                                                                before ending │
  │                                                                a turn (ms).  │
  │ --vad-threshold                                  FLOAT RANGE   Voice         │
  │                                                  [0.0<=x<=1.0  activity      │
  │                                                  ]             threshold     │
  │                                                                (0-1).        │
  │ --format-turns              --no-format-turns                  Format        │
  │                                                                (punctuate)   │
  │                                                                finalized     │
  │                                                                turns.        │
  │ --include-partial-turns                                        Emit partial  │
  │                                                                turns.        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Speakers & Channels ────────────────────────────────────────────────────────╮
  │ --speaker-labels                              Diarize speakers. With system  │
  │                                               audio the mic stays "You";     │
  │                                               only the system audio is split │
  │                                               into speakers.                 │
  │ --max-speakers          INTEGER RANGE [x>=1]  Max speakers.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Features ───────────────────────────────────────────────────────────────────╮
  │ --voice-focus                  [near-field|far-field  Voice focus (noise     │
  │                                ]                      suppression model).    │
  │ --voice-focus-threshold        FLOAT RANGE            Voice-focus threshold  │
  │                                [0.0<=x<=1.0]          (0-1).                 │
  │ --inactivity-timeout           INTEGER                Auto-close after N     │
  │                                                       seconds idle.          │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Guardrails ─────────────────────────────────────────────────────────────────╮
  │ --filter-profanity               Mask profanity.                             │
  │ --redact-pii                     Redact PII from turns.                      │
  │ --redact-pii-policy        TEXT  Comma-separated PII policies.               │
  │ --redact-pii-sub           TEXT  Replace redacted PII with: hash or          │
  │                                  entity_name.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Webhooks ───────────────────────────────────────────────────────────────────╮
  │ --webhook-url                TEXT        Webhook URL.                        │
  │ --webhook-auth-header        NAME:VALUE  Webhook auth header as NAME:VALUE.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ LLM Transform ──────────────────────────────────────────────────────────────╮
  │ --llm                 TEXT                  Run a prompt over the live       │
  │                                             transcript through LLM Gateway,  │
  │                                             refreshing the answer on every   │
  │                                             finalized turn. Repeatable: each │
  │                                             prompt runs on the previous      │
  │                                             one's response (a chain).        │
  │ --llm-interval        FLOAT RANGE [x>=0.0]  Seconds between --llm summary    │
  │                                             refreshes (0 refreshes on every  │
  │                                             turn).                           │
  │                                             [default: 10.0]                  │
  │ --model               TEXT                  LLM Gateway model.               │
  │                                             [default:                        │
  │                                             claude-haiku-4-5-20251001]       │
  │ --max-tokens          INTEGER               Max tokens. [default: 1000]      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Advanced ───────────────────────────────────────────────────────────────────╮
  │ --config             KEY=VALUE  Set any StreamingParameters field as         │
  │                                 KEY=VALUE (repeatable).                      │
  │ --config-file        FILE       JSON file of streaming fields.               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Stream from your microphone
   $ assembly stream
   Stream a file or URL in real time
   $ assembly stream recording.wav
   Stream the hosted sample
   $ assembly stream --sample
   Label speakers in the live transcript
   $ assembly stream --speaker-labels
   Boost domain terms with keyterm prompts
   $ assembly stream --keyterms-prompt "AssemblyAI" --keyterms-prompt "Claude"
   Summarize action items live as you talk
   $ assembly stream --llm "summarize action items"
   Print equivalent Python instead of running
   $ assembly stream --show-code
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcribe]
  '''
  
   Usage: assembly transcribe [OPTIONS] [SOURCE]
  
   Transcribe an audio file, URL, or YouTube/podcast link.
  
   Quickest start: assembly transcribe call.mp3 (or --sample for the hosted
   demo).
  
   Save with --out FILE, or pipe one field with -o text. YouTube and podcast-page
   URLs (any page yt-dlp can extract) are downloaded first, then transcribed.
  
   Curated flags cover common features; --config KEY=VALUE and --config-file
   reach
   every other field. Analysis (summary, chapters, ...) renders in human mode.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │   source      [SOURCE]  Audio file, URL, or YouTube/podcast URL.             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --sample                                         Use the hosted              │
  │                                                  wildfires.mp3 sample.       │
  │ --json       -j                                  Output the full result as   │
  │                                                  JSON. Text stays the        │
  │                                                  default even when piped;    │
  │                                                  opt in here (same as -o     │
  │                                                  json).                      │
  │ --output     -o      [text|id|status|utterances  Print one field: text, id,  │
  │                      |srt|json]                  status, utterances, srt     │
  │                                                  (captions), or json.        │
  │ --out                FILE                        Save the result to a file   │
  │                                                  instead of printing it      │
  │                                                  (clean text; pairs with     │
  │                                                  -o).                        │
  │ --show-code                                      Print the equivalent Python │
  │                                                  SDK code and exit (does not │
  │                                                  transcribe).                │
  │ --help                                           Show this message and exit. │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Model & Language ───────────────────────────────────────────────────────────╮
  │ --speech-model              [best|nano|slam-1|univ  Speech model.            │
  │                             ersal]                                           │
  │ --language-code             TEXT                    Force a language (e.g.   │
  │                                                     en_us).                  │
  │ --language-detection                                Auto-detect the spoken   │
  │                                                     language.                │
  │ --keyterms-prompt           TEXT                    Boost a key term         │
  │                                                     (repeatable).            │
  │ --temperature               FLOAT                   Speech model             │
  │                                                     temperature.             │
  │ --prompt                    TEXT                    Prompt to bias the       │
  │                                                     speech model (supported  │
  │                                                     models only).            │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Formatting ─────────────────────────────────────────────────────────────────╮
  │ --punctuate       --no-punctuate        Add punctuation.                     │
  │ --format-text     --no-format-text      Apply text formatting (casing,       │
  │                                         numbers).                            │
  │ --disfluencies                          Keep filler words (e.g. um, uh).     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Speakers & Channels ────────────────────────────────────────────────────────╮
  │ --speaker-labels                                 Enable diarization.         │
  │ --speakers-expected        INTEGER RANGE [x>=1]  Hint speaker count.         │
  │ --multichannel                                   Transcribe each audio       │
  │                                                  channel separately.         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Guardrails ─────────────────────────────────────────────────────────────────╮
  │ --redact-pii                                            Redact PII from the  │
  │                                                         transcript.          │
  │ --redact-pii-policy                TEXT                 Comma-separated PII  │
  │                                                         policies (e.g.       │
  │                                                         person_name,...).    │
  │ --redact-pii-sub                   [hash|entity_name]   How to replace       │
  │                                                         redacted PII.        │
  │ --redact-pii-audio                                      Also redact audio.   │
  │ --filter-profanity                                      Mask profanity.      │
  │ --content-safety                                        Detect sensitive     │
  │                                                         content.             │
  │ --content-safety-confidence        INTEGER RANGE        Content-safety       │
  │                                    [25<=x<=100]         confidence threshold │
  │                                                         (25-100).            │
  │ --speech-threshold                 FLOAT RANGE          Minimum proportion   │
  │                                    [0.0<=x<=1.0]        of speech required   │
  │                                                         (0-1).               │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Analysis ───────────────────────────────────────────────────────────────────╮
  │ --summarization                                      Summarize the           │
  │                                                      transcript.             │
  │ --summary-model             [informative|conversati  Summary model.          │
  │                             onal|catchy]                                     │
  │ --summary-type              [bullets|bullets_verbos  Summary format.         │
  │                             e|gist|headline|paragra                          │
  │                             ph]                                              │
  │ --auto-chapters                                      Generate chapters.      │
  │ --sentiment-analysis                                 Analyze sentiment.      │
  │ --entity-detection                                   Detect entities.        │
  │ --auto-highlights                                    Detect key phrases.     │
  │ --topic-detection                                    Detect IAB topics.      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Customization ──────────────────────────────────────────────────────────────╮
  │ --word-boost                  TEXT                  Boost a word             │
  │                                                     (repeatable).            │
  │ --custom-spelling-file        FILE                  JSON map of custom       │
  │                                                     spellings.               │
  │ --audio-start                 INTEGER RANGE [x>=0]  Start offset in ms.      │
  │ --audio-end                   INTEGER               End offset in ms.        │
  │ --download-sections           TEXT                  For a YouTube/podcast    │
  │                                                     URL, download only part  │
  │                                                     of the source (yt-dlp    │
  │                                                     "--download-sections"    │
  │                                                     syntax, e.g.             │
  │                                                     "*0:00-5:00" for the     │
  │                                                     first five minutes;      │
  │                                                     repeatable).             │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Webhooks ───────────────────────────────────────────────────────────────────╮
  │ --webhook-url                TEXT        Webhook URL for completion.         │
  │ --webhook-auth-header        NAME:VALUE  Webhook auth header as NAME:VALUE.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Translation ────────────────────────────────────────────────────────────────╮
  │ --translate-to        TEXT  Translate transcript to a language (repeatable). │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Advanced ───────────────────────────────────────────────────────────────────╮
  │ --config             KEY=VALUE  Set any TranscriptionConfig field as         │
  │                                 KEY=VALUE (repeatable).                      │
  │ --config-file        FILE       JSON file of config fields.                  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ LLM Transform ──────────────────────────────────────────────────────────────╮
  │ --llm               TEXT     Transform the finished transcript through LLM   │
  │                              Gateway. Repeatable: each prompt runs on the    │
  │                              previous one's response (a chain), the first on │
  │                              the transcript.                                 │
  │ --model             TEXT     LLM Gateway model.                              │
  │                              [default: claude-haiku-4-5-20251001]            │
  │ --max-tokens        INTEGER  Max tokens. [default: 1000]                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Transcribe a local file
   $ assembly transcribe call.mp3
   Try it with the hosted sample
   $ assembly transcribe --sample
   Transcribe a YouTube video
   $ assembly transcribe https://youtu.be/dtp6b76pMak
   Transcribe a podcast page
   $ assembly transcribe "https://podcasts.apple.com/…"
   Label who said what
   $ assembly transcribe call.mp3 --speaker-labels
   Redact PII for compliance
   $ assembly transcribe call.mp3 --redact-pii
   Summarize a recording
   $ assembly transcribe call.mp3 --summarization
   Ask about the transcript
   $ assembly transcribe call.mp3 --llm "List action items"
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcripts_get]
  '''
  
   Usage: assembly transcripts get [OPTIONS] TRANSCRIPT_ID
  
   Fetch a past transcript by id and print its text.
  
  ╭─ Arguments ──────────────────────────────────────────────────────────────────╮
  │ *    transcript_id      TEXT  Transcript id. [required]                      │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --output  -o      [text|id|status|utterances|s  Print one field of the       │
  │                   rt|json]                      result.                      │
  │ --json    -j                                    Output raw JSON.             │
  │ --help                                          Show this message and exit.  │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Fetch a transcript's text by id
   $ assembly transcripts get 5551234-abcd
   Speaker-labeled turns
   $ assembly transcripts get 5551234-abcd -o utterances
   Save SRT subtitles
   $ assembly transcripts get 5551234-abcd -o srt > captions.srt
   Get the raw JSON
   $ assembly transcripts get 5551234-abcd --json
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[transcripts_list]
  '''
  
   Usage: assembly transcripts list [OPTIONS]
  
   List recent transcripts.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --limit          INTEGER RANGE [x>=1]  How many transcripts to show.         │
  │                                        [default: 10]                         │
  │ --json   -j                            Output raw JSON.                      │
  │ --help                                 Show this message and exit.           │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   List your recent transcripts
   $ assembly transcripts list
   Show more at once
   $ assembly transcripts list --limit 50
   Grab the latest transcript id
   $ assembly transcripts list --json | jq -r '.[0].id'
   Summarize your latest transcript
   $ assembly llm "summarize" --transcript-id $(assembly transcripts list --json
   | jq -r '.[0].id')
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[usage]
  '''
  
   Usage: assembly usage [OPTIONS]
  
   Show usage over a date range (defaults to the last 30 days).
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --start                       TEXT  Start date (YYYY-MM-DD). Default: 30d    │
  │                                     ago.                                     │
  │ --end                         TEXT  End date (YYYY-MM-DD). Default: today.   │
  │ --window                      TEXT  Window size, e.g. 'day' or 'month'.      │
  │ --include-zero,--all                Include zero-usage windows (matches      │
  │                                     --include-logins on `assembly audit`).   │
  │ --json                -j            Output raw JSON.                         │
  │ --help                              Show this message and exit.              │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Usage over the last 30 days
   $ assembly usage
   A specific date range
   $ assembly usage --start 2026-05-01 --end 2026-06-01
   Break spend down by month
   $ assembly usage --window month
   Total spend in cents for scripting
   $ assembly usage --json | jq '[.usage_items[].line_items[].price] | add'
  
  
  
  '''
# ---
# name: test_command_help_matches_snapshot[whoami]
  '''
  
   Usage: assembly whoami [OPTIONS]
  
   Show the active profile and whether its key is usable.
  
  ╭─ Options ────────────────────────────────────────────────────────────────────╮
  │ --json  -j        Output raw JSON.                                           │
  │ --help            Show this message and exit.                                │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
   Examples
   Show the active profile and whether its key works
   $ assembly whoami
  
  
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[api_no_suggestion]
  '''
  Error: Transcription request failed: boom.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[not_authenticated]
  '''
  Error: You're not signed in.
  Suggestion: Run 'assembly onboard' for guided setup, 'assembly login' if you
  have an account, or set ASSEMBLYAI_API_KEY.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[plain_no_suggestion]
  '''
  Error: Something went wrong.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[rejected_key]
  '''
  Error: Your API key was rejected.
  Suggestion: Run 'assembly login' with a valid key, or set ASSEMBLYAI_API_KEY.
  
  '''
# ---
# name: test_error_human_render_matches_snapshot[usage_with_suggestion]
  '''
  Error: Unknown voice 'nope'.
  Suggestion: Run 'assembly agent --list-voices' to see the options.
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[api_no_suggestion]
  '''
  {"error": {"type": "api_error", "message": "Transcription request failed: boom."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[not_authenticated]
  '''
  {"error": {"type": "not_authenticated", "message": "You're not signed in.", "suggestion": "Run 'assembly onboard' for guided setup, 'assembly login' if you have an account, or set ASSEMBLYAI_API_KEY."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[plain_no_suggestion]
  '''
  {"error": {"type": "error", "message": "Something went wrong."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[rejected_key]
  '''
  {"error": {"type": "not_authenticated", "message": "Your API key was rejected.", "suggestion": "Run 'assembly login' with a valid key, or set ASSEMBLYAI_API_KEY."}}
  
  '''
# ---
# name: test_error_json_render_matches_snapshot[usage_with_suggestion]
  '''
  {"error": {"type": "usage_error", "message": "Unknown voice 'nope'.", "suggestion": "Run 'assembly agent --list-voices' to see the options."}}
  
  '''
# ---
